Fix future revoval type conversion